--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.application'
-
+apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 21
@@ -35,6 +35,10 @@ android {
         }
     }
 
+    sourceSets {
+        main.java.srcDirs += 'src/main/kotlin'
+    }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_7
         targetCompatibility JavaVersion.VERSION_1_7
@@ -43,6 +47,7 @@ android {
 
 dependencies {
     compile project(':common')
+    compile 'org.jetbrains.kotlin:kotlin-stdlib:0.10.195'
     compile 'com.google.android.support:wearable:1.1.0'
     compile 'com.google.android.gms:play-services-wearable:6.5.87'
     compile 'com.jakewharton.timber:timber:2.5.0'
