--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -1,6 +1,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.dgsd.android.wearsmyphone">
 
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.DISABLE_KEYGUARD" />
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
+
     <application
         android:label="@string/app_name"
         android:icon="@drawable/ic_launcher"
@@ -9,7 +13,7 @@
 
         <meta-data
             android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version" />
+            android:value="@integer/google_play_services_version"/>
 
         <activity
             android:name=".activity.MainActivity"
@@ -20,13 +24,21 @@
             </intent-filter>
         </activity>
 
+        <activity
+            android:name=".activity.AlertActivity"
+            android:theme="@style/AppTheme.Alert"
+            android:launchMode="singleInstance"
+            android:excludeFromRecents="true"
+            android:taskAffinity=""
+            android:showOnLockScreen="true"/>
+
         <service android:name=".service.WearableInteractionService">
             <intent-filter>
-                <action android:name="com.google.android.gms.wearable.BIND_LISTENER" />
+                <action android:name="com.google.android.gms.wearable.BIND_LISTENER"/>
             </intent-filter>
         </service>
 
-        <service android:name=".service.NoisyNotificationService" />
+        <service android:name=".service.NoisyNotificationService"/>
 
     </application>
 
