--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -52,4 +52,17 @@ dependencies {
     compile 'com.google.android.gms:play-services-wearable:6.5.87'
     compile 'com.jakewharton.timber:timber:2.5.0'
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+}
+buildscript {
+    ext.kotlin_version = '0.10.770'
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    }
+}
+repositories {
+    mavenCentral()
 }
